# pitcher-rating

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: analysis.ipynb  pitcher_rating.ipynb
src/pitcher_rating/: api.py  logger.py  main.py
