[project]
name = "pitcher_rating"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "pybaseball",
]

[tool.uv.sources]
httpx = { git = "https://github.com/jldbc/pybaseball", branch = "master" }

[project.scripts]
rate = "pitcher_rating.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pitcher_rating"]
